Fixed save button alignment

--- a/client/src/components/SaveBtn/SaveBtn.css
+++ b/client/src/components/SaveBtn/SaveBtn.css
@@ -1,3 +1,4 @@
 .save-btn {
   color: green;
+  float: right;
 }
